--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "homepage": "http://aaronleslie.github.io/Meet_Aaron",
+  "homepage": "http://aaronkzhou.github.io/Meet_Aaron",
   "dependencies": {
     "add": "^2.0.6",
     "animejs": "^2.2.0",
